--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ li.list-group-item {
   font-size: 0.9rem;
 }
 
-li.Land-Země {
+li.Zeme {
   background-color: #3b1d13;
 }
 
@@ -80,7 +80,7 @@ span.land {
   color: #3b1d13;
 }
 
-li.Flood-Potopa {
+li.Potopa {
   background-color: #41437c;
 }
 
@@ -88,7 +88,7 @@ span.flood {
   color: #41437c;
 }
 
-li.Weather-Počasí {
+li.Pocasi {
   background-color: #a6bced;
 }
 
@@ -96,7 +96,7 @@ span.weather {
   color: #a6bced;
 }
 
-li.Flame-Oheň {
+li.Ohen {
   background-color: #b44347;
 }
 
@@ -104,7 +104,7 @@ span.flame {
   color: #b44347;
 }
 
-li.Army-Armáda {
+li.Armada {
   background-color: #312b2f;
 }
 
@@ -112,7 +112,7 @@ span.army {
   color: #312b2f;
 }
 
-li.Wizard-Čaroděj {
+li.Carodej {
   background-color: #e056a3;
 }
 
@@ -120,7 +120,7 @@ span.wizard {
   color: #e056a3;
 }
 
-li.Leader-Vůdce {
+li.Vudce {
   background-color: #7b48a4;
 }
 
@@ -128,7 +128,7 @@ span.leader {
   color: #7b48a4;
 }
 
-li.Beast-Tvor {
+li.Tvor {
   background-color: #60a35c;
 }
 
@@ -136,7 +136,7 @@ span.beast {
   color: #60a35c;
 }
 
-li.Weapon-Zbraň {
+li.Zbran {
   background-color: #878586;
 }
 
@@ -144,7 +144,7 @@ span.weapon {
   color: #878586;
 }
 
-li.Artifact-Artefakt {
+li.Artefakt {
   background-color: #d24e37;
 }
 
@@ -152,7 +152,7 @@ span.artifact {
   color: #d24e37;
 }
 
-li.Wild-Divoká {
+li.Divoka {
   background-color: #c6c2c3;
 }
 
